[gd_scene load_steps=2 format=3 uid="uid://bd54lb04sfcow"]

[ext_resource type="Script" path="res://main_menu/main_menu.gd" id="1_d4mu3"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_d4mu3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.5
offset_top = -47.0
offset_right = 55.5
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonPlay" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="ButtonQuit" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/ButtonPlay" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
